--- a/cvmfstech.tex
+++ b/cvmfstech.tex
@@ -21,7 +21,7 @@
 \providecommand{\osxfuse}{{\scshape OSXFuse}}
 \providecommand{\aufs}{{\scshape AUFS}}
 \providecommand{\nfs}{{\scshape nfs}}
-\providecommand{\afs}{{\scshape AFS}}
+\providecommand{\afs}{{\scshape afs}}
 \providecommand{\rpm}{{\scshape rpm}}
 \providecommand{\dpkg}{{\scshape dpkg}}
 \providecommand{\yum}{{\scshape yum}}
