--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,45 @@
 
+
+@techreport{wpad99,
+	Author = {Paul Gauthier and Josh Cohen and Martin Dunsmuir and Charles Perkins},
+	Institution = {IETF Secretariat},
+	Title = {Web Proxy Auto-Discovery Protocol},
+	Type = {Internet-Draft},
+	Year = {1999}}
+
+@inbook{coral03,
+	Author = {Michael J. Freedman and David Mazi{\`e}res},
+	Editor = {M. Frans Kaashoek and Ion Stoica},
+	Pages = {45-55},
+	Publisher = {Springer},
+	Series = {Lecture Notes in Computer Science},
+	Title = {Sloppy hashing and self-organizing clusters},
+	Volume = {2735},
+	Year = {2003}}
+
+@inproceedings{caspar03,
+	Author = {Niraj Tolia and Michael Kozuch and Mahadev Satyanarayanan and Brad Karp and Thomas Bressoud and Adrian Perrig},
+	Booktitle = {Proc. of the USENIX Annual Technical Conference},
+	Title = {Opportunistic Use of Content Addressable Storage for Distributed File Systems},
+	Year = {2003}}
+
+@article{akamai10,
+	Author = {Erik Nygren and Ramesh K. Sitaraman and Jennifer Sun},
+	Journal = {ACM SIGOPS Operating Systems Review},
+	Number = {3},
+	Pages = {2-19},
+	Title = {The {Akamai} Network: A Platform for High-Performance Internet Applications},
+	Volume = {44},
+	Year = {2010}}
+
+@inproceedings{httpfuse06,
+	Author = {K. Suzaki and T. Yagi and K. Iijima and K. Kitagawa and S. Tashiro},
+	Booktitle = {Proc. of the 2006 Linux Symposium},
+	Pages = {379-392},
+	Title = {{HTTP-FUSE} {Xenoppix}},
+	Volume = {2},
+	Year = {2006}}
+
 @misc{leveldb,
         Author = {Jeffrey Dean and Sanjay Ghemawat},
         Howpublished = {\url{http://code.google.com/p/leveldb/}},
