--- a/cpt-configure.tex
+++ b/cpt-configure.tex
@@ -2,19 +2,21 @@
 
 \section{Structure of /etc/cvmfs}
 The local configuration of \cvmfs\ is controlled by several files in \texttt{/etc/cvmfs} listed in Table~\ref{tbl:configfiles}.
-For every .conf file except for site.conf you can create a corresponding .local file having the same prefix in order to customize the configuration.
+For every .conf file except for the files in /etc/cvmfs/default.d you can create a corresponding .local file having the same prefix in order to customize the configuration.
 The .local file will be sourced after the corresponding .conf file.
 
 In a typical installation, a handful of parameters need to be set in /etc/cvmfs/default.local.
 Most likely, this is the list of repositories (\texttt{CVMFS\_REPOSITORIES}), HTTP proxies (see Section~\ref{sct:config:network}), and perhaps the cache directory and the cache quota (see Section~\ref{sct:config:cache})
 In a few cases, one might change a parameter for a specific domain or a specific repository, \eg provide an exclusive cache for a specific repository (see Section~\ref{sct:config:cache}).
+For a list of all parameters, see Appendix~\ref{apx:parameters}.
 
 The .conf and .local configuration files are key-value pairs in the form \texttt{PARAMETER=value}.
 They are sourced by /bin/sh.
 Hence, a limited set of shell commands can be used inside these files including comments, \texttt{if} clauses, parameter evaluation, and shell math (\texttt{\$((\dots))}).
 Special characters have to be quoted.
 For instance, instead of \texttt{CVMFS\_HTTP\_PROXY=p1;p2}, write \texttt{CVMFS\_HTTP\_PROXY='p1;p2'} in order to avoid parsing errors.
-For a list of all parameters, see Appendix~\ref{apx:parameters}.
+The shell commands in the configuration files can use the \texttt{CVMFS\_FQRN} parameter, which contains the fully qualified repository names that is being mounted.
+The current working directory is set to the parent directory of the configuration file at hand.
 
 \begin{table}
 	\begin{center}
@@ -22,12 +24,12 @@ For a list of all parameters, see Appendix~\ref{apx:parameters}.
 			\toprule
 			{\bf\centering File} & {\bf\centering Purpose} \\
 			\midrule
-			\texttt{config.sh} & Set of internal helper functions \\
-			\texttt{default.conf} & Set of parameters reflecting the standard configuration \\
+			\texttt{config.sh} & Set of internal helper functions. \\
+			\texttt{default.conf} & Set of base parameters.\\
 			\texttt{default.d/\$config.conf} & Adjustments to the default.conf configuration, usually installed by a cvmfs-config-$\cdots$ package.  Read before default.local.\\
 			\texttt{domain.d/\$domain.conf} & Domain-specific parameters and implementations of the functions in \texttt{config.sh} \\
 			\texttt{config.d/\$repository.conf} & Repository-specific parameters and implementations of the functions in \texttt{config.sh} \\
-			\texttt{keys/*.pub} & Public keys used to verify the digital signature of file catalogs \\
+			\texttt{keys/} & Contains domain-specific sub directories with public keys used to verify the digital signature of file catalogs \\
 			\bottomrule
 		\end{tabularx}
 	\end{center}
@@ -35,16 +37,23 @@ For a list of all parameters, see Appendix~\ref{apx:parameters}.
 	\label{tbl:configfiles}
 \end{table}
 
+\subsection{The ``Config Repository''}
+In addition to the local system configuration, a client can configure a dedicated ``config repository''.
+A config repository is a standard mountable \cvmfs\ repository that resembles the directory structure of /etc/cvmfs.
+It can be used to centrally maintain the public keys and configuration of repositories that should not be distributed with rather static packages.
+Configuration from the config repository is overwritten by the local configuration in case of conflicts.
+The config repository is set by the \texttt{CVMFS\_CONFIG\_REPOSITORY} parameter.
+The default configuration sets this parameter to cvmfs-config.cern.ch.
 
 \section{Mounting}
-Typically, mounting of \cvmfs\ repositories is handled by \autofs.
+Mounting of \cvmfs\ repositories is typically handled by \autofs.
 Just by accessing a repository directory under /cvmfs (\eg /cvmfs/atlas.cern.ch), \autofs\ will take care of mounting.
 \autofs\ will also automatically unmount a repository if it is not used for a while.
 
 Instead of using \autofs, \cvmfs\ repositories can be mounted manually with the system's \texttt{mount} command.
 In order to do so, use the \texttt{cvmfs} file system type, like
 \begin{verbatim}
-  mount -t cvmfs atlas /cvmfs/atlas.cern.ch
+  mount -t cvmfs atlas.cern.ch /cvmfs/atlas.cern.ch
 \end{verbatim}
 Likewise, \cvmfs\ repositories can be mounted through entries in /etc/fstab.
 A sample entry in /etc/fstab:
@@ -59,10 +68,10 @@ If a repository is needed under several paths, use a \emph{bind mount} or use a 
 
 \subsection{Private Mount Points}
 \label{sct:privatemount}
-In contrast to the system's \texttt{mount} command which requires root privileges, \cvmfs\ can also be mounted like other Fuse file systems by normal users.
+In contrast to the system's \texttt{mount} command which requires root privileges, \cvmfs\ can also be mounted like other \fuse\ file systems by normal users.
 In this case, \cvmfs\ uses parameters from one or several user-provided config files instead of using the files under /etc/cvmfs.
 \cvmfs\ private mount points do not appear as \texttt{cvmfs2} file systems but as \texttt{fuse} file systems.
-The \texttt{cvmfs\_config} and \texttt{cvmfs\_talk} commands do not affect privately mounted \cvmfs\ repositories.
+The \texttt{cvmfs\_config} and \texttt{cvmfs\_talk} commands ignore privately mounted \cvmfs\ repositories.
 On an interactive machine, private mount points are for instance unaffected by an administrator unmounting all system's \cvmfs\ mount points by \texttt{cvmfs\_config unmount}.
 
 In order to mount \cvmfs\ privately, use the \texttt{cvmfs2} command like
@@ -74,26 +83,26 @@ A minimal sample myparams.conf file could look like this:
   CVMFS_CACHE_BASE=/home/user/mycache
   CVMFS_CLAIM_OWNERSHIP=yes
   CVMFS_RELOAD_SOCKETS=/home/user/mycache
-  CVMFS_SERVER_URL=http://cvmfs-stratum-one.cern.ch/opt/atlas
+  CVMFS_SERVER_URL=http://cvmfs-stratum-one.cern.ch/cvmfs/atlas.cern.ch
   CVMFS_HTTP_PROXY=DIRECT
 \end{verbatim}
 
 Make sure to use absolute path names for the mount point and for the cache directory.
 Use \texttt{fusermount -u} in order to unmount a privately mounted \cvmfs\ repository.
 
-The private mount points can also be used to use the \cvmfs\ Fuse module where it has not been installed under /usr and /etc.
+The private mount points can also be used to use the \cvmfs\ Fuse module in case it has not been installed under /usr and /etc.
 If the public keys are not installed under /etc/cvmfs/keys, the directory of the keys needs to be specified in the config file by \texttt{CVMFS\_KEYS\_DIR=<directory>}.
 If the libcvmfs\_fuse.so library is not installed in one of the standard search paths, the \texttt{LD\_LIBRARY\_PATH} variable has to be set accordingly for the \texttt{cvmfs2} command.
 
 \section{Network Settings}
 \label{sct:config:network}
-\cvmfs\ uses HTTP~\cite{rfc1945,rfc2616} for data transfer.
-Repository data can be replicated to multiple web servers and cached by standard web proxies such as Squid.
+\cvmfs\ uses HTTP for the data transfer.
+Repository data can be replicated to multiple web servers and cached by standard web proxies such as \squid~\cite{squid99}.
 In a typical setup, repositories are replicated to a handful of web servers in different locations.
 These replicas form the \cvmfs\ Stratum 1 service, whereas the replication source server is the \cvmfs\ Stratum 0 server.
-On every cluster of machines, there should be two or more web proxy servers that \cvmfs\ can use (see Section~\ref{sct:squid}).
+In every cluster of client machines, there should be two or more web proxy servers that \cvmfs\ can use (see Section~\ref{sct:squid}).
 These site-local web proxies reduce the network latency for the \cvmfs\ clients and they reduce the load for the Stratum 1 service.
-\cvmfs\ supports choosing a random proxy for load-balancing and automatic fail-over to other hosts and proxies in case of network errors.
+\cvmfs\ supports WPAD/PAC proxy auto configuration~\cite{wpad99}, choosing a random proxy for load-balancing, and automatic fail-over to other hosts and proxies in case of network errors.
 Roaming clients can connect directly to the Stratum 1 service.
 
 \subsection{Stratum 1 List}
@@ -110,10 +119,10 @@ the Stratum 1 servers can be automatically sorted according to round trip
 time by \texttt{cvmfs\_talk host probe} (see Section~\ref{sct:tools}).
 Otherwise, the proxy server would invalidate round trip time measurement.
 
-The special sequence \texttt{@org@} in the \texttt{CVMFS\_SERVER\_URL} string is replaced by the repository name (not fully qualified).
+The special sequence \texttt{@fqrn@} in the \texttt{CVMFS\_SERVER\_URL} string is replaced by fully qualified repository name (\eg atlas.cern.cn, cms.cern.ch, \dots).
 That allows to use the same parameter for many repositories hosted under the same domain.
-For instance, \url{http://cvmfs-stratum-one.cern.ch/opt/@org@} can resolve to \url{http://cvmfs-stratum-one.cern.ch/opt/atlas}, \url{http://cvmfs-stratum-one.cern.ch/opt/cms}, and so on depending on the repository that is being mounted.
-The same works for the sequence \texttt{@fqrn@} with fully qualified repository names (\eg atlas.cern.cn, cms.cern.ch, \dots).
+For instance, \url{http://cvmfs-stratum-one.cern.ch/cvmfs/@fqrn@} can resolve to \url{http://cvmfs-stratum-one.cern.ch/cvmfs/atlas.cern.ch}, \url{http://cvmfs-stratum-one.cern.ch/cvmfs/cms.cern.ch}, and so on depending on the repository that is being mounted.
+The same works for the sequence \texttt{@org@} which is replaced by the unqualified repository name (\eg atlas, cms, \dots).
 
 \subsection{Proxy Lists}
 \cvmfs\ uses a dedicated HTTP proxy configuration, independent from system-wide settings. 
@@ -127,6 +136,7 @@ After probing the last proxy group in the chain, the first proxy is probed again
 To avoid endless loops, for each file download the number of switches is restricted by the total number of proxies.
 
 The chain of proxy groups is specified by a string of semicolon separated entries, each group is a list of pipe separated hostnames\footnote{The usual proxy notation rules apply, like \texttt{http://proxy1:8080|http://proxy2:8080;DIRECT}}.
+Multiple IP addresses behind a single proxy host name (DNS \emph{round-robin} entry) are automatically transformed into a load-balanced group.
 The \texttt{DIRECT} keyword for a hostname avoids using proxies.
 Note that the \texttt{CVMFS\_HTTP\_PROXY} parameter is necessary in order to mount.
 If you don't use proxies, set the parameter to \texttt{DIRECT}.
@@ -142,17 +152,14 @@ The special proxy server ``auto'' in \texttt{CVMFS\_HTTP\_PROXY} is resolved acc
 PAC files can be on a file system or accessible via HTTP.
 \cvmfs\ looks for PAC files in the order given by the semicolon separated URLs in the \texttt{CVMFS\_PAC\_URLS} environment variable.
 This variable defaults to \url{http://wpad/wpad.dat}.
-The \texttt{auto} keyword used as a URL in \texttt{CVMFS\_PAC\_URLS} is resolved to \url{http://wpad/wpad.dat}, too, in order to be compatible with Frontier.
+The \texttt{auto} keyword used as a URL in \texttt{CVMFS\_PAC\_URLS} is resolved to \url{http://wpad/wpad.dat}, too, in order to be compatible with \product{Frontier}~\cite{frontier08}.
 
 \subsection{Fallback Proxy List}
-In addition to the regular proxy list set by \texttt{CVMFS\_HTTP\_PROXY},
-a fallback proxy list is supported in \texttt{CVMFS\_FALLBACK\_PROXY}.
-The syntax of both lists is the same.  The fallback proxy list is
-appended to the regular proxy list, and if the fallback proxy list
-is set, any DIRECT is removed from both lists.  The automatic proxy
-configuration of the previous section only sets the regular proxy list,
-not the fallback proxy list.  Also the fallback proxy list can be
-automatically reordered; see the next section.
+In addition to the regular proxy list set by \texttt{CVMFS\_HTTP\_PROXY}, a fallback proxy list is supported in \texttt{CVMFS\_FALLBACK\_PROXY}.
+The syntax of both lists is the same. 
+The fallback proxy list is appended to the regular proxy list, and if the fallback proxy list is set, any DIRECT is removed from both lists.
+The automatic proxy configuration of the previous section only sets the regular proxy list, not the fallback proxy list.
+Also the fallback proxy list can be automatically reordered; see the next section.
 
 \subsection{Ordering of Servers according to Geographic Proximity}
 \label{sct:geoapi}
@@ -168,7 +175,8 @@ That will geographically sort both the servers set by \texttt{CVMFS\_SERVER\_URL
 \cvmfs\ tries to gracefully recover from broken network links and temporarily overloaded paths.
 The timeout for connection attempts and for very slow downloads can be set by \texttt{CVMFS\_TIMEOUT} and \texttt{CVMFS\_TIMEOUT\_DIRECT}.
 The two timeout parameters apply to a connection with a proxy server and to a direct connection to a Stratum 1 server, respectively.
-A download is considered to be ``very slow'' if the transfer rate is below 100 Bytes/second for more than the timeout interval.
+A download is considered to be ``very slow'' if the transfer rate is below \SI{1}{\kilo\byte\per\second} for more than the timeout interval.
+The threshold can be adjusted with the \texttt{CVMFS\_LOW\_SPEED\_LIMIT} parameter.
 A very slow download is treated like a broken connection.
 
 On timeout errors and on connection failures (but not on name resolving failures), \cvmfs\ will retry the path using an exponential backoff.
@@ -185,13 +193,12 @@ Downloaded files will be stored in a local cache directory.
 The \cvmfs\ cache has a soft quota; as a safety margin, the partition hosting the cache should provide \SI{15}{\percent} more space than the soft quota limit.
 Once the quota limit is reached, \cvmfs\ will automatically remove files from the cache according to the least recently used policy~\cite{lru06}.
 Removal of files is performed bunch-wise until half of the maximum cache size has been freed.
-Currently, \cvmfs\ is not able to access files in the repository that are larger than half of the cache quota.
 The quota limit can be set in Megabytes by \texttt{CVMFS\_QUOTA\_LIMIT}.
 For typical repositories, a few Gigabytes make a good quota limit.
 For repositories hosted at \cern, quota recommendations can be found under \url{http://cernvm.cern.ch/portal/cvmfs/examples}.
 
 The cache directory needs to be on a local file system in order to allow each host the accurate accounting of the cache contents; on a network file system, the cache can potentially be modified by other hosts.
-Furthermore, the cache directory is used to create (transient) sockets and pipes, which is usually only supported by a local file system such as ext3 or XFS.
+Furthermore, the cache directory is used to create (transient) sockets and pipes, which is usually only supported by a local file system.
 The location of the cache directory can be set by \texttt{CVMFS\_CACHE\_BASE}.
 
 On SELinux enabled systems, the cache directory and its content need to be labeled as \texttt{cvmfs\_cache\_t}.
@@ -206,7 +213,7 @@ In order to have a repository not join the shared cache but use an exclusive cac
 
 \subsection{Alien Cache}
 An ``alien cache'' provides the possibility to use a data cache outside the control of \cvmfs.
-This can be necessary in HPC environments where local disk space is not available or scarce but powerful cluster file systems are available.
+This can be necessary, for instance, in HPC environments where local disk space is not available or scarce but powerful cluster file systems are available.
 The alien cache directory is a directory in addition to the ordinary cache directory.
 The ordinary cache directory is still used to store control files.
 
@@ -234,15 +241,15 @@ The alien cache might be used in combination with a special repository replicati
 This allows to propagate an entire repository into the cache of a cluster file system for HPC setups that do not allow outgoing connectivity.
 
 \section{NFS Server Mode}
-In case there is no local hard disk space available on a cluster of worker nodes, a single \cvmfs\ client can be exported via NFS~\cite{rfc1813,rfc3530} to these worker nodes.
+In case there is no local hard disk space available on a cluster of worker nodes, a single \cvmfs\ client can be exported via \nfs~\cite{rfc1813,rfc3530} to these worker nodes.
 This mode of deployment will inevitably introduce a performance bottleneck and a single point of failure and should be only used if necessary.
 
-NFS export requires Linux kernel >= 2.6.27 on the NFS server.
-It works for Scientific Linux 6 but not for Scientific Linux 5.
-NFS clients can run both SL5 and SL6.
+NSF export requires Linux kernel >= 2.6.27 on the NFS server.
+For instance, exporting works for Scientific Linux 6 but not for Scientific Linux 5.
 The NFS server should run a lock server as well.
 For proper NFS support, set \texttt{CVMFS\_NFS\_SOURCE=yes}. 
 Also, \autofs\ for \cvmfs\ needs to be turned off and repositories need to be mounted manually.
+On the client side, all available \nfs\ implementations should work.
 
 In the NFS mode, upon mount an additionally directory nfs\_maps.\$repository\_name appears in the \cvmfs\ cache directory.
 These \emph{NFS maps} use \leveldb\ to store the virtual inode \cvmfs\ issues for any accessed path.
@@ -255,10 +262,11 @@ For a \cvmfs\ instance that is exported via NFS, the safety margin for the NFS m
 It also might be necessary to monitor the actual space consumption.
 
 \subsection{Tuning}
-For decent performance, the amount of memory given to the meta-data cache should be increased. 
+The default settings in \cvmfs\ are tailored to the normal, non-NFS use case.
+For decent performance in the NFS deployment, the amount of memory given to the meta-data cache should be increased. 
 By default, this is 16M.
 It can be increased, for instance, to 256M by setting \texttt{CVMFS\_MEMCACHE\_SIZE} to 256.
-Furthermore, the maximum number of download retries should be increased to at least 2 for the NFS use case.
+Furthermore, the maximum number of download retries should be increased to at least 2.
 
 The number of NFS daemons should be increased as well.
 A value of 128 NFS daemons has shown perform well.
@@ -267,7 +275,7 @@ In Scientific Linux, the number of NFS daemons is set by the \texttt{RPCNFSDCOUN
 The performance will benefit from large RAM on the NFS server ($\geq\SI{16}{\giga\byte}$) and \cvmfs\ caches hosted on an SSD hard drive.
 
 \subsection{Shared NFS Maps (HA-NFS)}
-As an alternative to the existing, \leveldb\ managed NFS maps, the NFS maps can optionally be managed out of the \cvmfs\ cache directory by \sqlite.
+As an alternative to the existing, \leveldb~\cite{leveldb} managed NFS maps, the NFS maps can optionally be managed out of the \cvmfs\ cache directory by \sqlite.
 This allows the NFS maps to be placed on shared storage and accessed by multiple \cvmfs\ NFS export nodes simultaneously for clustering and active high-availablity setups.
 In order to enable shared NFS maps, set \texttt{CVMFS\_NFS\_SHARED} to the path that should be used to host the \sqlite\ database.  
 If the path is on shared storage, the shared storage has to support POSIX file locks.
@@ -290,7 +298,7 @@ A sample entry /etc/fstab entry on a client:
 \label{sct:hotpatch}
 
 By hotpatching a running \cvmfs\ instance, most of the code can be reloaded without unmounting the file system.
-The current active code is unloaded and the code from the currently installed binaries is reloaded.
+The current active code is unloaded and the code from the currently installed binaries is loaded.
 Hotpatching is logged to syslog.
 Since \cvmfs\ is re-initialized during hotpatching and configuration parameters are re-read, hotpatching can be also seen as a ``reload''.
 
@@ -311,7 +319,7 @@ The currently loaded set of parameters can be shown by
 \begin{verbatim}
   cvmfs_talk parameters
 \end{verbatim}
-The \cvmfs\ packages use hotpatching in order to update previous versions.
+The \cvmfs\ packages use hotpatching in the package upgrade process.
 
 
 \section{Auxiliary Tools}
@@ -320,7 +328,7 @@ The \cvmfs\ packages use hotpatching in order to update previous versions.
 \subsection{cvmfs\_fsck}
 \cvmfs\ assumes that the local cache directory is trustworthy.
 However, it might happen that files get corrupted in the cache directory caused by errors outside the scope of \cvmfs.
-\cvmfs\ stores files in the local disk cache with their cryptographic content hash key as name, which makes it fairly easy to verify file integrity.
+\cvmfs\ stores files in the local disk cache with their cryptographic content hash key as name, which makes it easy to verify file integrity.
 \cvmfs\ contains the \texttt{cvmfs\_fsck} utility to do so for a specific cache directory. 
 Its return value is comparable to the system's \texttt{fsck}.
 For example,
@@ -348,7 +356,7 @@ The \texttt{cvmfs\_config} utility provides commands in order to setup the syste
 	\item [probe] The \texttt{probe} command tries to access /cvmfs/\$repository for all repositories specified in \texttt{CVMFS\_REPOSITORIES}.
 	\item [reload] The \texttt{reload} command is used to reload or hotpatch \cvmfs\ instances (see Section~\ref{sct:hotpatch}).
 	\item [unmount] The \texttt{unmount} command unmounts all currently mounted \cvmfs\ repositories, which will only succeed if there are no open file handles on the repositories.
-	\item [wipecache] The \texttt{wipecache} command tries to unmount all currenlty mounted \cvmfs\ repositories and, in case of success, removes all files in the \cvmfs\ cache.
+	\item [wipecache] The \texttt{wipecache} command is an alias for \texttt{reload -c}.
 	\item [bugreport] The \texttt{bugreport} command creates a tarball with collected system information which helps to debug a problem (see Section~\ref{sct:debugginghints}). 
 \end{description}
 
