--- a/cpt-overview.tex
+++ b/cpt-overview.tex
@@ -1,31 +1,31 @@
 \chapter{Overview}
 
-The \cernvmfs\ (\cvmfs) is a read-only file system designed to deliver high energy physics (HEP) experiment analysis software onto virtual machines and grid worker nodes in a fast, scalable, and reliable way.
+The \cernvmfs\ (\cvmfs) is a read-only file system designed to deliver scientific software onto virtual machines and physical worker nodes in a fast, scalable, and reliable way.
 %\cvmfs\ decouples the underlying operating system from the experiment defined software stack.
 Files and file metadata are downloaded on demand and aggressively cached.
-For the distribution of files, \cvmfs\ uses a standard HTTP transport, which allows exploitation of a variety of web caches, including commercial content delivery networks.
+For the distribution of files, \cvmfs\ uses a standard HTTP~\cite{rfc1945,rfc2616} transport, which allows exploitation of a variety of web caches, including commercial content delivery networks.
 \cvmfs\ ensures data authenticity and integrity over these possibly untrusted caches and connections. %while keeping all distributed data cacheable.
 
 The \cvmfs\ software comprises client-side software to mount ``\cvmfs\ repositories'' (similar to AFS volumes) as well as a server-side toolkit to create such distributable \cvmfs\ repositories.
 Figure~\ref{fig:concept} shows an overview of software distribution with \cvmfs.
-Figure~\ref{fig:fuse} shows how \cvmfs\ interlocks with Fuse and a web server in order to deliver files.
+Figure~\ref{fig:fuse} shows how \cvmfs\ interlocks with \fuse~\cite{fuse} and a web server in order to deliver files.
 
-The first implementation of \cvmfs\ was based on \product{grow-fs}~\cite{parrot05, growfs09}, which was originally provided as one of the private file system options available in \indexed{Parrot}. 
-Parrot traps the system I/O calls and that is resulting in a performance penalty and occasional compatibility problems with some applications. 
-The principal differences of \cvmfs\ compared to \product{grow-fs} are:
+The first implementation of \cvmfs\ was based on \product{grow-fs}~\cite{parrot05, growfs09}, which was originally provided as one of the private file system options available in \indexed{Parrot}.
+Ever since the design evolved and diverged, taking into account the works on \product{HTTP-Fuse}~\cite{httpfuse06} and content-delivery networks~\cite{caspar03,coral03,akamai10}.
+Its current implementation provides the following key features:
 \begin{itemize}
-	\item Use of the the Fuse kernel module~\cite{fuse} that comes with in-kernel caching of file data and file attributes
+	\item Use of the the Fuse kernel module that comes with in-kernel caching of file data and file attributes
 	\item Cache quota management
 	\item Use of a content addressable storage format resulting in immutable files and automatic file de-duplication
-	\item Possibility to split a directory hierarchy into sub catalogues at user-defined levels
+	\item Possibility to split a directory hierarchy into sub catalogs at user-defined levels
 	\item Automatic updates of file catalogs controlled by a \indexed{time to live}\index{TTL|see{time to live}} stored inside file catalogs
 	\item Digitally signed repositories
 	\item Transparent file compression/decompression and transparent file chunking
 	\item Capability to work in \indexed{offline mode} providing that all required files are cached
 	\item File system versioning
 	\item File system hotpatching
-	\item Dynamical expansion of environment variables embedded in \indexed{symbolic link}s\index{symlink|see{symbolic link}}
-	\item Automatic server selection
+	\item Dynamic expansion of environment variables embedded in \indexed{symbolic link}s\index{symlink|see{symbolic link}}
+	\item Automatic mirror server selection based on geographic proximity
 	\item Automatic load-balancing of proxy servers
 	\item Support for WPAD/PAC auto-configuration of proxy servers
 	\item Efficient replication of repositories
@@ -36,7 +36,9 @@ The principal differences of \cvmfs\ compared to \product{grow-fs} are:
 %Though the task of installing software is done remotely on the repository side, software is still executed locally under control of the user.
 %This is in contrast to software as a service where control is completely handed over to a third party.
 In contrast to general purpose network file systems such as \nfs\ or \afs, \cvmfs\ is particularly crafted for fast and scalable software distribution.
-Running and compiling software that is hosted on shared areas is typically hard for general purpose network file systems.
+Running and compiling software is a use case general purpose distributed file systems are not optimized for.
+In contrast to virtual machine images or Docker images, software installed in \cvmfs\ does not need to be further packaged.
+Instead it is distributed and versioned file-by-file.
 %For instance, running and compiling software might easily overload \nfs\ or \product{Lustre}~\cite{lustre03} shared software areas.
 
 In order to create and update a \cvmfs\ repository, a distinguished machine, the so-called \emph{Release Manager Machine}, is used.
@@ -52,6 +54,7 @@ As such, a \cvmfs\ repository is similar to a repository in the sense of a versi
 	\end{center}
 	\caption{A \cvmfs\ client provides a virtual file system that loads data only on access.  
 		In this example, all releases of a sofware package (such as an HEP experiment framework) are hosted as a \cvmfs\ repository on a web server.}
+		On the client, only data and metadata of the software releases that are actually used are downloaded and cached.
 	\label{fig:concept}
 \end{figure}
 
@@ -59,7 +62,7 @@ As such, a \cvmfs\ repository is similar to a repository in the sense of a versi
 	\begin{center}
 		\input{figures/fuse}
 	\end{center}
-	\caption{Opening a file on \cvmfs. \cvmfs\ resolves the name by means of an SQLite catalog, which is prepended by a memory cache. 
+	\caption{Opening a file on \cvmfs. \cvmfs\ resolves the name by means of an \sqlite\ catalog. 
 		Downloaded files are verified against the cryptographic hash of the corresponding catalog entry. 
 		The \texttt{read()} and the \texttt{stat()} system call can be entirely served from the in-kernel file system buffers.}
 	\label{fig:fuse}
