--- a/cvmfstech.tex
+++ b/cvmfstech.tex
@@ -19,7 +19,7 @@
 \providecommand{\fuse}{{\scshape Fuse}}
 \providecommand{\fusex}{{\scshape Fuse4X}}
 \providecommand{\osxfuse}{{\scshape OSXFuse}}
-\providecommand{\aufs}{{\scshape AUFS}}
+\providecommand{\aufs}{{\scshape aufs}}
 \providecommand{\nfs}{{\scshape nfs}}
 \providecommand{\afs}{{\scshape afs}}
 \providecommand{\rpm}{{\scshape rpm}}
